[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/city_drawing.jpg" type="Texture" id=3]
[ext_resource path="res://resources/Menu-Selection-sound.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/AccesibilidadScene.gd" type="Script" id=5]
[ext_resource path="res://scenes/IrAlMenuScene.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 2 )

[node name="AccesibilidadScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1444.0
margin_top = -425.407
margin_right = 476.002
margin_bottom = 854.593
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxColor" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -273.0
margin_right = 273.0
margin_bottom = 499.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -233.0
margin_top = 20.0
margin_right = 241.0
margin_bottom = 473.0
custom_constants/separation = 150
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 474.0
margin_bottom = 247.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccesibilidadTitle" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 474.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Accesibilidad"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 474.0
margin_bottom = 166.0

[node name="TamañoLetrasButton" type="Button" parent="VBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 45.0
margin_right = 428.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "1. Tamaño de letras"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 191.0
margin_right = 474.0
margin_bottom = 247.0

[node name="VozButton" type="Button" parent="VBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 12.0
margin_right = 462.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "2. Configuración de voz"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 397.0
margin_right = 474.0
margin_bottom = 453.0

[node name="VolverAConfigButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_right = 474.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "4. Volver a configuración"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="IrAlMenuScene" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer/TamañoLetrasButton" to="." method="_on_TamaoLetrasButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer2/VozButton" to="." method="_on_VozButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VolverAConfigButton" to="." method="_on_VolverAConfigButton_pressed"]
[connection signal="finished" from="SelectionSound" to="." method="_on_SelectionSound_finished"]
